--- a/src/app/layout/layouts/horizontal/modern/modern.component.html
+++ b/src/app/layout/layouts/horizontal/modern/modern.component.html
@@ -43,7 +43,7 @@
                         src="images/logo/logo-text-on-dark.svg"
                     />
                 </div>
-                <img class="flex w-8 lg:hidden" src="images/logo/logo.svg" />
+                <img class="flex w-8 lg:hidden" src="images/logo/logo.png" />
             </div>
             <!-- Horizontal navigation -->
             <fuse-horizontal-navigation
