--- a/src/app/layout/layouts/vertical/classy/classy.component.html
+++ b/src/app/layout/layouts/vertical/classy/classy.component.html
@@ -14,7 +14,7 @@
         <div class="flex w-full items-center p-4 pl-6">
             <!-- Logo -->
             <div class="flex items-center justify-center">
-                <img class="w-8" src="images/logo/logo.svg" />
+                <img class="w-8" src="images/logo/logo.png" />
             </div>
             <!-- Components -->
             <div class="ml-auto flex items-center">
@@ -58,7 +58,7 @@
         <div
             class="mb-4 mt-2 flex h-16 flex-0 items-center justify-center pl-2 pr-6 opacity-12"
         >
-            <img class="max-w-36" src="images/logo/logo-text-on-dark.svg" />
+            <!-- <img class="max-w-36" src="images/logo/logo-text-on-dark.svg" /> -->
         </div>
     </ng-container>
 </fuse-vertical-navigation>
