--- a/src/app/modules/admin/dashboards/clients/clients.component.html
+++ b/src/app/modules/admin/dashboards/clients/clients.component.html
@@ -4,10 +4,10 @@
         <div class="flex w-full items-center justify-between">
             <div>
                 <h2 class="text-3xl font-semibold leading-8 tracking-tight">
-                    Liste des commandes
+                    Liste des clients
                 </h2>
                 <div class="text-secondary font-medium tracking-tight">
-                    Consulter vos commandes
+                    Consulter vos clients
                 </div>
             </div>
         </div>
@@ -18,7 +18,7 @@
         </div>
 
         <div class="mt-8 grid w-full grid-cols-1 gap-8 xl:grid-cols-3">
-            <!-- Commandes table -->
+            <!-- Clients table -->
             <div
                 class="bg-card flex flex-auto flex-col overflow-hidden rounded-2xl shadow xl:col-span-12"
             >
@@ -27,79 +27,76 @@
                         class="w-full bg-transparent"
                         mat-table
                         matSort
-                        [dataSource]="commandesDataSource"
+                        [dataSource]="clientsDataSource"
                         [trackBy]="trackByFn"
-                        #commandesTable
+                        #clientsTable
                     >
-                        <!-- Commande ID -->
-                        <ng-container matColumnDef="nFact">
+                        <!-- Client ID -->
+                        <ng-container matColumnDef="code">
                             <th
                                 mat-header-cell
                                 mat-sort-header
                                 *matHeaderCellDef
                             >
-                                N° Commande
+                                N° Client
                             </th>
-                            <td mat-cell *matCellDef="let commande">
+                            <td mat-cell *matCellDef="let client">
                                 <span
                                     class="text-secondary whitespace-nowrap pr-6 text-sm font-medium"
                                 >
-                                    {{ commande.nfact }}
+                                    {{ client.code }}
                                 </span>
                             </td>
                         </ng-container>
 
-                        <!-- Date -->
-                        <ng-container matColumnDef="datvte">
+                        <!-- Nom -->
+                        <ng-container matColumnDef="nom">
                             <th
                                 mat-header-cell
                                 mat-sort-header
                                 *matHeaderCellDef
                             >
-                                Date
+                                Nom
                             </th>
-                            <td mat-cell *matCellDef="let commande">
+                            <td mat-cell *matCellDef="let client">
                                 <span class="whitespace-nowrap pr-6">
-                                    {{ convertToDate(commande.datvte) | date: 'dd/MM/yyyy' }}
+                                    {{ client.nom }}
                                 </span>
                             </td>
                         </ng-container>
 
-                        <!-- Amount -->
-                        <ng-container matColumnDef="brutht">
+                        <!-- Num -->
+                        <ng-container matColumnDef="num">
                             <th
                                 mat-header-cell
                                 mat-sort-header
                                 *matHeaderCellDef
                             >
-                                Total
+                                Numéro
                             </th>
-                            <td mat-cell *matCellDef="let commande">
+                            <td mat-cell *matCellDef="let client">
                                 <span
                                     class="whitespace-nowrap pr-6 font-medium"
                                 >
-                                    {{convertStringToDecimal(commande.brutht) }} TND
+                                    {{client.tel2 }}
                                 </span>
                             </td>
                         </ng-container>
 
-                         <!-- Status -->
-                         <ng-container matColumnDef="etat">
-                            <th
-                                mat-header-cell
-                                mat-sort-header
-                                *matHeaderCellDef
-                            >
+                         <!-- Confirmation -->
+                         <ng-container matColumnDef="conf">
+                            <th mat-header-cell mat-sort-header *matHeaderCellDef>
                                 Etat
                             </th>
-                            <td mat-cell *matCellDef="let commande">
-                                <span
-                                    class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-bold uppercase tracking-wide bg-green-200 text-green-800 dark:bg-green-600 dark:text-green-50"
-                                >
-                                    <span
-                                        class="whitespace-nowrap leading-relaxed"
-                                        > Validé </span
-                                    >
+                            <td mat-cell *matCellDef="let client">
+                                <span *ngIf="client.status === 'Active'" 
+                                      class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-bold uppercase tracking-wide bg-green-200 text-green-800 dark:bg-green-600 dark:text-green-50">
+                                    <span class="whitespace-nowrap leading-relaxed"> Actif </span>
+                                </span>
+                                <span *ngIf="client.status !== 'Active'" 
+                                      class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-bold uppercase tracking-wide bg-yellow-200 text-yellow-800 dark:bg-yellow-600 dark:text-yellow-50 cursor-pointer" 
+                                      (click)="onPendingClick(client)">
+                                    <span class="whitespace-nowrap leading-relaxed"> En Attente </span>
                                 </span>
                             </td>
                         </ng-container>
@@ -112,10 +109,10 @@
                                 *matHeaderCellDef
                             >
                             </th>
-                            <td mat-cell *matCellDef="let commande">
+                            <td mat-cell *matCellDef="let client">
                                 <button
                                     mat-icon-button
-                                    (click)="openPdf(commande.nfact)"
+                                    (click)="openPdf(client.nfact)"
                                 >
                                     <mat-icon>picture_as_pdf</mat-icon>
                                 </button>
@@ -135,14 +132,14 @@
 
                         <tr
                             mat-header-row
-                            *matHeaderRowDef="commandesTableColumns"
+                            *matHeaderRowDef="clientsTableColumns"
                         ></tr>
                         <tr
                             class="order-row h-16"
                             mat-row
                             *matRowDef="
                                 let row;
-                                columns: commandesTableColumns
+                                columns: clientsTableColumns
                             "
                         ></tr>
                         <tr
@@ -154,7 +151,7 @@
                     <mat-paginator
                         [pageSizeOptions]="[5, 10, 25, 100]"
                         showFirstLastButtons
-                        aria-label="Selectionnez la page de la liste des commandes"
+                        aria-label="Selectionnez la page de la liste des clients"
                     ></mat-paginator>
                 </div>
             </div>
