--- a/src/app/layout/common/settings/settings.component.html
+++ b/src/app/layout/common/settings/settings.component.html
@@ -3,7 +3,7 @@
     [class.lg:right-0]="
         config.layout === 'centered' || config.layout === 'material'
     "
-    [class.lg:right-16]="
+    [class.lg:right-0]="
         config.layout !== 'centered' && config.layout !== 'material'
     "
     style="top: 275px"
@@ -48,7 +48,7 @@
 
         <div class="flex flex-col p-6">
             <!-- Theme -->
-            <div class="text-secondary text-md font-semibold">THEME</div>
+            <!-- <div class="text-secondary text-md font-semibold">THEME</div>
             <div class="mt-6 grid grid-cols-2 gap-3 sm:grid-cols-3">
                 @for (theme of config.themes; track theme) {
                     <div
@@ -70,7 +70,7 @@
                 }
             </div>
 
-            <hr class="my-8" />
+            <hr class="my-8" /> -->
 
             <!-- Scheme -->
             <div class="text-secondary text-md font-semibold">SCHEME</div>
@@ -140,7 +140,7 @@
             <!-- Layout -->
             <div class="text-secondary text-md font-semibold">LAYOUT</div>
             <div class="mt-6 grid grid-cols-3 gap-3">
-                <!-- Empty -->
+                <!-- Empty
                 <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('empty')"
@@ -159,10 +159,10 @@
                     >
                         Empty
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Classic -->
-                <div
+                <!-- <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('classic')"
                 >
@@ -216,7 +216,7 @@
                     >
                         Classic
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Classy -->
                 <div
@@ -281,7 +281,7 @@
                 </div>
 
                 <!-- Compact -->
-                <div
+                <!-- <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('compact')"
                 >
@@ -334,7 +334,7 @@
                     >
                         Compact
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Dense -->
                 <div
@@ -393,7 +393,7 @@
                 </div>
 
                 <!-- Futuristic -->
-                <div
+                <!-- <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('futuristic')"
                 >
@@ -447,10 +447,10 @@
                     >
                         Futuristic
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Thin -->
-                <div
+                <!-- <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('thin')"
                 >
@@ -511,10 +511,10 @@
                     </div>
                 </div>
 
-                <div class="col-span-2"></div>
+                <div class="col-span-2"></div> -->
 
                 <!-- Centered -->
-                <div
+                <!-- <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('centered')"
                 >
@@ -564,10 +564,10 @@
                     >
                         Centered
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Enterprise -->
-                <div
+                <!-- <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('enterprise')"
                 >
@@ -625,10 +625,10 @@
                     >
                         Enterprise
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Material -->
-                <div
+                <!-- <div
                     class="flex cursor-pointer flex-col"
                     (click)="setLayout('material')"
                 >
@@ -686,7 +686,7 @@
                     >
                         Material
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Modern -->
                 <div
