--- a/src/app/layout/layouts/horizontal/enterprise/enterprise.component.html
+++ b/src/app/layout/layouts/horizontal/enterprise/enterprise.component.html
@@ -118,7 +118,7 @@
     >
         <div class="flex h-14 w-full max-w-360 items-center sm:h-20">
             <span class="text-secondary font-medium"
-                >Fuse &copy; {{ currentYear }}</span
+                >Challenge &copy; 2024</span
             >
         </div>
     </div>
