--- a/src/app/layout/layouts/horizontal/centered/centered.component.html
+++ b/src/app/layout/layouts/horizontal/centered/centered.component.html
@@ -98,7 +98,7 @@
             class="bg-card relative z-49 flex h-16 w-full flex-0 items-center justify-start border-t px-6 dark:bg-default sm:h-20 sm:px-8 print:hidden"
         >
             <span class="text-secondary font-medium"
-                >Fuse &copy; {{ currentYear }}</span
+                >Challenge &copy; 2024</span
             >
         </div>
     </div>
