--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -113,7 +113,7 @@
             class="bg-card flex h-14 w-full max-w-360 items-center border-t px-6 dark:bg-default sm:h-20 sm:shadow-xl md:px-8"
         >
             <span class="text-secondary font-medium"
-                >Fuse &copy; {{ currentYear }}</span
+                >Challenge &copy; 2024</span
             >
         </div>
     </div>
