--- a/src/app/layout/layouts/vertical/compact/compact.component.html
+++ b/src/app/layout/layouts/vertical/compact/compact.component.html
@@ -64,7 +64,7 @@
         class="bg-card relative z-49 flex h-14 w-full flex-0 items-center justify-start border-t px-4 dark:bg-transparent md:px-6 print:hidden"
     >
         <span class="text-secondary font-medium"
-            >Fuse &copy; {{ currentYear }}</span
+            >Challenge &copy; 2024</span
         >
     </div>
 </div>
