--- a/src/app/layout/layouts/vertical/dense/dense.component.html
+++ b/src/app/layout/layouts/vertical/dense/dense.component.html
@@ -46,11 +46,11 @@
         </div>
         <!-- Components -->
         <div class="ml-auto flex items-center space-x-0.5 pl-2 sm:space-x-2">
-            <languages></languages>
+            <!--<languages></languages>-->
             <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
             <search [appearance]="'bar'"></search>
             <shortcuts></shortcuts>
-            <messages></messages>
+            <!--<messages></messages>
             <notifications></notifications>
             <button
                 class="lg:hidden"
@@ -60,7 +60,7 @@
                 <mat-icon
                     [svgIcon]="'heroicons_outline:chat-bubble-left-right'"
                 ></mat-icon>
-            </button>
+            </button>-->
             <user></user>
         </div>
     </div>
@@ -79,10 +79,9 @@
         class="bg-card relative z-49 flex h-14 w-full flex-0 items-center justify-start border-t px-4 dark:bg-transparent md:px-6 print:hidden"
     >
         <span class="text-secondary font-medium"
-            >Fuse &copy; {{ currentYear }}</span
+            >Challenge &copy; 2024</span
         >
     </div>
 </div>
 
 <!-- Quick chat -->
-<quick-chat #quickChat="quickChat"></quick-chat>
