client name addded to facture table + home button

--- a/src/app/layout/layouts/vertical/dense/dense.component.html
+++ b/src/app/layout/layouts/vertical/dense/dense.component.html
@@ -13,7 +13,7 @@
     <!-- Navigation header hook -->
     <ng-container fuseVerticalNavigationContentHeader>
         <!-- Logo -->
-        <div class="flex h-20 items-center justify-center">
+        <div class="flex h-20 items-center justify-center" (click)="home()" style="cursor: pointer;">
             <img class="w-8" src="images/logo/logo.png" alt="Logo image" />
         </div>
     </ng-container>
